tests/ui/suggestions/type-mismatch-byte-literal.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-byte-literal.rs:7:18
   |
LL |     let _x: u8 = 'X';
   |             --   ^^^ expected `u8`, found `char`
   |             |
   |             expected due to this
   |
help: if you meant to write a byte literal, prefix with `b`
   |
LL |     let _x: u8 = b'X';
   |                  ~~~~

error[E0308]: mismatched types
  --> $DIR/type-mismatch-byte-literal.rs:11:9
   |
LL |     foo('#');
   |     --- ^^^ expected `u8`, found `char`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/type-mismatch-byte-literal.rs:4:4
   |
LL | fn foo(_t: u8) {}
   |    ^^^ ------
help: if you meant to write a byte literal, prefix with `b`
   |
LL |     foo(b'#');
   |         ~~~~

error[E0308]: mismatched types
  --> $DIR/type-mismatch-byte-literal.rs:16:18
   |
LL |     let _t: u8 = '€';
   |             --   ^^^ expected `u8`, found `char`
   |             |
   |             expected due to this

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
